--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-kapsule": "^2.2.3",
     "react-scripts": "5.0.0",
+    "timelines-chart": "^2.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
